--- a/React-Tutorials/src/demos/01_simpleDemo/index.html
+++ b/React-Tutorials/src/demos/01_simpleDemo/index.html
@@ -10,5 +10,12 @@
 </head>
 <body>
 
+    <div id="example"></div>
+
+
+    <script type="text/babel">
+        ReactDOM.render(<h1>Bucky</h1>,document.getElementById('example'));
+    </script>
+
 </body>
 </html>
