4 - Rendering Multile Components
    Each compoment can render only one element.
    If multiple renders are necessary, need to wrap them up.

--- a/React-Tutorials/src/demos/01_simpleDemo/index.html
+++ b/React-Tutorials/src/demos/01_simpleDemo/index.html
@@ -18,12 +18,22 @@
         var Bacon = React.createClass({
             render : function(){
                 return (
-                    <h3>This is a simple component</h3>
+                    <div>
+                        <h3>This is a simple component</h3>
+                        <p>I am some sample text</p>
+                    </div>
                 );
             }
         });
 
-        ReactDOM.render(<Bacon />,document.getElementById('example'));
+        ReactDOM.render(
+            <div>
+                <Bacon />
+                <Bacon />
+                <Bacon />
+            </div>,
+            document.getElementById('example')
+        );
 
     </script>
 
