--- a/React-Tutorials/src/demos/01_simpleDemo/index.html
+++ b/React-Tutorials/src/demos/01_simpleDemo/index.html
@@ -10,29 +10,30 @@
 </head>
 <body>
 
-    <div id="example"></div>
+    <div id="app"></div>
 
 
     <script type="text/babel">
 
-        var Bacon = React.createClass({
-            render : function(){
-                return (
+        var Movie = React.createClass({
+            render: function(){
+                return(
                     <div>
-                        <h3>This is a simple component</h3>
-                        <p>I am some sample text</p>
+                        <h1>{this.props.title}</h1>
+                        <h2>{this.props.genre}</h2>
                     </div>
                 );
             }
         });
 
+
         ReactDOM.render(
             <div>
-                <Bacon />
-                <Bacon />
-                <Bacon />
+                <Movie title="Avatar" genre="sifi"/>
+                <Movie title="The Notebook" genre="romannce"/>
+                <Movie title="Captain" genre="action"/>
             </div>,
-            document.getElementById('example')
+            document.getElementById('app')
         );
 
     </script>
