--- a/React-Tutorials/src/demos/01_simpleDemo/index.html
+++ b/React-Tutorials/src/demos/01_simpleDemo/index.html
@@ -4,36 +4,44 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>React - Template</title>
+    <link rel="stylesheet" type="text/css" href="../../css/main.css">
     <script src="../../js/react.min.js"></script>
     <script src="../../js/react-dom.min.js"></script>
     <script src="../../js/browser.min.js"></script>
 </head>
 <body>
 
-    <div id="app"></div>
+    <div id="container"></div>
 
 
     <script type="text/babel">
 
-        var Movie = React.createClass({
+        var Comment = React.createClass({
+            edit: function(){
+                alert('Editing comment');
+            },
+            remove: function(){
+                alert('Removing comment')
+            },
             render: function(){
-                return(
-                    <div>
-                        <h1>{this.props.title}</h1>
-                        <h2>{this.props.genre}</h2>
+                return (
+                    <div className="commentContainer">
+                        <div className="commentText">Current value : {this.props.children}</div>
+                        <button onClick={this.edit} className="button-primary">Edit</button>
+                        <button onClick={this.remove} className="button-danger">Remove</button>
                     </div>
                 );
             }
         });
 
-
         ReactDOM.render(
-            <div>
-                <Movie title="Avatar" genre="sifi"/>
-                <Movie title="The Notebook" genre="romannce"/>
-                <Movie title="Captain" genre="action"/>
-            </div>,
-            document.getElementById('app')
+            <div className="board">
+                <Comment>aaa</Comment>
+                <Comment>bbb</Comment>
+                <Comment>ccc</Comment>
+            </div>
+            ,
+            document.getElementById('container')
         );
 
     </script>
