--- a/React-Tutorials/src/demos/01_simpleDemo/index.html
+++ b/React-Tutorials/src/demos/01_simpleDemo/index.html
@@ -16,30 +16,36 @@
 
     <script type="text/babel">
 
-        var Comment = React.createClass({
-            edit: function(){
-                alert('Editing comment '+this.props.children);
+        var CheckBox = React.createClass({
+
+            getInitialState: function(){
+                return {checked: true};
             },
-            remove: function(){
-                alert('Removing comment '+this.props.children)
+
+            handleChecked: function(){
+                this.setState({checked: !this.state.checked});
             },
+
             render: function(){
-                return (
-                    <div className="commentContainer">
-                        <div className="commentText">Current value : {this.props.children}</div>
-                        <button onClick={this.edit} className="button-primary">Edit</button>
-                        <button onClick={this.remove} className="button-danger">Remove</button>
+                var msg = 'checked';
+
+                if(this.state.checked){
+                    msg = 'checked';
+                }else{
+                    msg = 'unchecked';
+                }
+
+                return(
+                    <div>
+                        <input type="checkbox" onChange={this.handleChecked} defaultChecked={this.state.checked} />
+                        <h3>CheckBox is {msg}</h3>
                     </div>
                 );
             }
         });
 
         ReactDOM.render(
-            <div className="board">
-                <Comment>aaa</Comment>
-                <Comment>bbb</Comment>
-                <Comment>ccc</Comment>
-            </div>
+            <CheckBox />
             ,
             document.getElementById('container')
         );
