--- a/React-Tutorials/src/demos/01_simpleDemo/index.html
+++ b/React-Tutorials/src/demos/01_simpleDemo/index.html
@@ -17,20 +17,44 @@
     <script type="text/babel">
 
         var Comment = React.createClass({
+            getInitialState: function(){
+                return {editing: false};
+            },
             edit: function(){
-                alert('Editing comment '+this.props.children);
+                // alert('Editing comment '+this.props.children);
+                this.setState({editing: true});
             },
             remove: function(){
-                alert('Removing comment '+this.props.children)
+                // alert('Removing comment '+this.props.children)
+                console.log('Removing comment '+this.props.children)
             },
-            render: function(){
-                return (
+            save: function(){
+                this.setState({editing: false});
+            },
+            renderNormal: function(){
+                return(
                     <div className="commentContainer">
                         <div className="commentText">Current value : {this.props.children}</div>
                         <button onClick={this.edit} className="button-primary">Edit</button>
                         <button onClick={this.remove} className="button-danger">Remove</button>
                     </div>
                 );
+
+            },
+            renderForm: function(){
+                return(
+                    <div className="commentContainer">
+                        <textarea defaultValue={this.props.children}></textarea>
+                        <button onClick={this.save} className="button-success">Save</button>
+                    </div>
+                );
+            },
+            render: function(){
+                if(this.state.editing){
+                    return this.renderForm();
+                }else{
+                    return this.renderNormal();
+                }
             }
         });
 
